Add autogenerator_test submodule, properly licensed

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Naut"]
 	path = Naut
 	url = https://github.com/Axel--/Naut-for-reddit.git
+[submodule "autogenerator_test"]
+	path = autogenerator_test
+	url = https://github.com/debium/autogenerator_test.git
