--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ gems:
  - jekyll-paginate
  - jekyll-gist
  - jekyll-coffeescript
- - jekyll-press
+ - jekyll-minifier
 paginate: 4
 paginate_path: "/posts/page:num"
